--- a/numbers.html
+++ b/numbers.html
@@ -19,7 +19,7 @@
             <p>Both Netflix and Hulu present a variety of movies and TV shows, including those
                 created by the streaming services themselves, and others that were created
                 elsewhere and re-broadcast.</p>
-                <img src="Presenting Data 24'/img/content_amount.png" alt = "Netflix vs. Hulu" width="50%">
+                <img src="img/content_amount.png" alt = "Netflix vs. Hulu" width="50%">
             <p>Netflix content has been 1200 offerings or more since 2017, peaking with over 2000
                 items in 2019 and then declining during the pandemic years, resulting in
                 approximately 1500 programs in 2021. Hulu's offerings have steadily increased since
@@ -31,7 +31,7 @@
                 <h2>Netflix shows more movies, and Hulu shows more TV (or does it?)</h2>
                 <p>As we saw in the introduction, Netflix started out as a movie service, and Hulu
                     started out as a way for users to watch TV.</p>
-                <img src="Presenting Data 24'/img/movies_vs_tv.png" alt="Movies vs TV for Netflix and Hulu" width="50%">
+                <img src="img/movies_vs_tv.png" alt="Movies vs TV for Netflix and Hulu" width="50%">
                 <p>Netflix started as a movie service, and has continued to provide more movies than
                     TV series. Interestingly, from 2017 to 2021, Hulu’s distribution of content has
                     changed from predominantly TV to a dominance of movies. Is Hulu turning into
