--- a/where.html
+++ b/where.html
@@ -13,8 +13,8 @@
         <main>
         <p>Hulu is only offered in the United States, but Netflix has a global presence.
                 However, that has to do with viewers, not creators. Where is content made?</p>
-                <img src="Presenting Data 24'/img/waffle_Netflix.png" alt= "Where are Netflix movies made" width="50%">
-                <img src="Presenting Data 24'/img/waffle_Hulu.png" alt="Where are Hulu movies made" width="50%">
+                <img src="img/waffle_Netflix.png" alt= "Where are Netflix movies made" width="50%">
+                <img src="img/waffle_Hulu.png" alt="Where are Hulu movies made" width="50%">
         <p>Netflix leverages international creators, with nearly 60% of its content from 2017-
             2021 created entirely outside of the United States, or by international creators in
             partnership with the United States. Unfortunately, much of the information on the
